# minicode

./: .gitignore  LICENSE  README.md  pyproject.toml  test_thinking_fix.py
.minicode/: AGENTS.md
.minicode/agents/: code-reviewer.md  explorer.md  test-writer.md
.minicode/hooks/: block_dangerous.py  block_dangerous.sh  cwd_time_prompt.py  log_tool_calls.py
.minicode/rules/: behavior.md  code-style.md
minicode/: __init__.py  __main__.py  _ansi.py  command.py  config.py  paths.py  registry.py
minicode/agent/: __init__.py  loader.py  runtime.py
minicode/bus/: __init__.py
minicode/chatbridge/: __init__.py  adapter.py  manager.py
minicode/cli/: __init__.py  app.py  input.py
minicode/display/: __init__.py  formatter.py
tests/: demo_mcp_server.py  test_agent.py  test_agent_loader.py  test_agent_runtime.py  test_anthropic.py  test_base.py  test_bus.py  test_chat_cli.py  test_chatbridge_adapter.py  test_chatbridge_manager.py  test_chatbridge_stdio.py  test_chatbridge_webhook.py  test_cli_input.py  test_config.py  test_context_view.py  test_demo.py  test_display.py  test_e2e_mcp.py  test_goal_cli.py  test_goal_judge.py  test_goal_service.py  test_goal_types.py  test_hooks_dispatcher.py  test_hooks_python.py  test_hooks_shell.py  test_hooks_types.py  test_memory_budget.py  test_memory_compact.py  test_memory_context.py  test_memory_history.py  test_memory_loaders.py  test_memory_status.py  test_memory_truncation.py  test_model_registry.py  test_openai_compat.py  test_permission.py  test_registry.py  test_skill_loader.py  test_subagent_tool.py  test_thinking_fix.py
(+48 files in other folders)
