[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyminicode"
version = "0.4.0"
description = "Terminal-native AI coding assistant (Python) with ReAct loop, memory system, and extensible tool/skill/hook architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# TODO: 发布前替换为真实信息
authors = [{ name = "minicode authors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
minicode = "minicode.cli.app:main"

[tool.setuptools.packages.find]
include = ["minicode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
